[tool.poetry]
name = "leetcode_problems"
version = "0.1.0"
description = "A repository for working leetcode problems locally"
authors = ["donaldKelly17 <donaldkelly17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
